# cmis2c

./: .gitignore  README.md  cmis_low_memory.h  pyproject.toml  run.py
cmis2c/: __main__.py  cli.py  generator.py  parser.py
output/: cmis.h  cmis_page_00h.h  cmis_page_01h.h
tests/: test_cmis_low_memory.c
